--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "browserslist": "^4.27.0",
     "laravel-vite-plugin": "^2.0.1",
     "lightningcss": "^1.30.2",
+    "typescript": "^5.9.3",
     "vite": "^7.2.1",
-    "vite-plugin-laravel": "^0.3.1"
+    "vite-plugin-laravel": "^0.3.1",
+    "vue-tsc": "^3.1.3"
+  },
+  "dependencies": {
+    "vue": "^3.5.24"
   }
 }
